<resources>
    <string name="app_name">City GuideIST</string>
    <string name="home">Home</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="popular_places">Popular Places</string>
    <string name="museums">Museums</string>
    <string name="cafe_restaurant">Cafe &amp; Restaurant</string>
    <string name="cinema">Cinema</string>
    <string name="shopping">Shopping</string>
    <string name="hotels">Hotels</string>
    <string name="bus">Bus</string>
    <string name="airports">Airports</string>
    <string name="hospitals">Hospitals</string>
    <string name="transportation">Transportation</string>
    <string name="topkapi_palace">Topkapı Palace</string>
    <string name="maidens_tower">Maiden\'s Tower</string>
    <string name="blue_mosque">Blue Mosque</string>
    <string name="spice_bazaar">Spice Bazaar</string>
    <string name="yedikule_fortress">Yedikule Fortress</string>
    <string name="pera_museum">Pera Museum</string>
    <string name="istanbul_modern">İstanbul Modern</string>
    <string name="nusret">Nusr-Et</string>
    <string name="mall_of_istanbul">Mall of İstanbul</string>
    <string name="armada_hotel">Armada Hotel</string>
    <string name="topkapi_palace_hook">İstanbul\'s center for 400 years</string>
    <string name="maidens_tower_hook">Source of legends</string>
    <string name="blue_mosque_hook">A historic masterpiece</string>
    <string name="spice_bazaar_hook">Most colorful bazaar in Turkey</string>
    <string name="yedikule_fortress_hook">Dungeons of horror in Ottoman</string>
    <string name="pera_museum_hook">Art in Beyoğlu</string>
    <string name="istanbul_modern_hook">Modern face of İstanbul</string>
    <string name="nusret_hook">Wordly famous saltbae</string>
    <string name="mall_of_istanbul_hook">İstanbul\'s shopping star</string>
    <string name="armada_hotel_hook">A great experience</string>
    <string name="topkapi_palace_short_address">Fatih</string>
    <string name="maidens_tower_short_address">Üsküdar</string>
    <string name="blue_mosque_short_address">Fatih</string>
    <string name="spice_bazaar_short_address">Fatih</string>
    <string name="yedikule_fortress_short_address">Fatih</string>
    <string name="pera_museum_short_address">Beyoğlu</string>
    <string name="istanbul_modern_short_address">Beyoğlu</string>
    <string name="nusret_short_address">Beşiktaş</string>
    <string name="mall_of_istanbul_short_address">Başakşehir</string>
    <string name="armada_hotel_short_address">Fatih</string>
    <string name="topkapi_palace_long_address">Cankurtaran Mh., 34122 Fatih/İstanbul</string>
    <string name="maidens_tower_long_address">Salacak Mahallesi, Üsküdar Salacak Mevkii, 34668 Üsküdar/İstanbul</string>
    <string name="blue_mosque_long_address">Sultan Ahmet Mahallesi, Atmeydanı Cd. No:7, 34122 Fatih/İstanbul</string>
    <string name="spice_bazaar_long_address">Rüstem Paşa Mahallesi, Erzak Ambarı Sok. No:92, 34116 Fatih/İstanbul</string>
    <string name="yedikule_fortress_long_address">Yedikule Mahallesi, Yedikule Meydanı Sk. No:9, 34107 Fatih/İstanbul</string>
    <string name="pera_museum_long_address">Asmalı Mescit Mahallesi, Meşrutiyet Cd. No:65, 34430 Beyoğlu/İstanbul</string>
    <string name="istanbul_modern_long_address">Kılıçali Paşa Mahallesi, Meclis-i Mebusan Cd. No:4, 34433 Beyoğlu/İstanbul</string>
    <string name="nusret_long_address">Etiler Mahallesi, Nispetiye Cd No:87, 34337 Beşiktaş/İstanbul</string>
    <string name="mall_of_istanbul_long_address">Ziya Gökalp Mahallesi, Süleyman Demirel Blv No:7, 34306 İkitelli Osb/Başakşehir/İstanbul</string>
    <string name="armada_hotel_long_address">Cankurtaran Mh., Ahırkapı Cd No:24, 34122 Fatih/İstanbul</string>
    <string name="topkapi_palace_description">"Topkapı Palace is a large museum in Istanbul, Turkey. In the 15th century, it served as the main residence and administrative headquarters of the Ottoman sultans.
Construction began in 1459, ordered by Mehmed the Conqueror, six years after the conquest of Constantinople. Topkapı was originally called the ""New Palace"" to distinguish it from the Old Palace in Beyazıt Square. It was given the name Topkapı, meaning Cannon Gate, in the 19th century."</string>
    <string name="maidens_tower_description">The Maiden\'s Tower, also known as Leander\'s Tower (Tower of Leandros) since the medieval Byzantine period, is a tower lying on a small islet located at the southern entrance of the Bosphorus strait 200 m (220 yd) from the coast of Üsküdar in Istanbul, Turkey.
</string>
    <string name="blue_mosque_description">The Blue Mosque or Sultan Ahmet Mosque is a historic mosque located in Istanbul, Turkey. A popular tourist site, the Sultan Ahmed Mosque continues to function as a mosque today; men still kneel in prayer on the mosque\'s lush red carpet after the call to prayer.
</string>
    <string name="spice_bazaar_description">"The Spice Bazaar  in Istanbul, Turkey is one of the largest bazaars in the city. Located in the Eminönü quarter of the Fatih district, it is the most famous covered shopping complex after the Grand Bazaar.
There are several documents suggesting the name of the bazaar was first ""New Bazaar"". The building was endowed to the foundation of the New Mosque, and got its name ""Egyptian Bazaar"" because it was built with the revenues from the Ottoman eyalet of Egypt in 1660."</string>
    <string name="yedikule_fortress_description">"Yedikule Fortress  is a fortified historic structure located in the Yedikule neighbourhood of Fatih, in Istanbul, Turkey.
Built in 1458 on the commission of Ottoman Sultan Mehmed II, the seven-tower complex was created by adding three new towers and fully enclosing a section of the ancient Walls of Constantinople, including the two twin towers that originally constituted the triumphal Golden Gate built by Byzantine Emperors Theodosius I and Theodosius II."
    </string>
    <string name="pera_museum_description">Pera Museum is an art museum in the Tepebaşı quarter of the Beyoğlu (Pera) district in Istanbul, Turkey, located at Meşrutiyet Avenue No. 65 (adjacent to İstiklal Avenue and in close proximity to Taksim Square). It has a particular focus on Orientalism in 19th-century art.
</string>
    <string name="istanbul_modern_description">İstanbul Modern, a.k.a. Istanbul Museum of Modern Art, is a museum of contemporary art in the Beyoğlu district of Istanbul, Turkey. Inaugurated on December 11, 2004, the museum focuses on artists from Turkey.
</string>
    <string name="topkapi_palace_work_hours">09.00&#8211;16:45</string>
    <string name="maidens_tower_work_hours">09:15&#8211;18:45</string>
    <string name="blue_mosque_work_hours">Open for 24 hours</string>
    <string name="spice_bazaar_work_hours">08:00&#8211;19:00</string>
    <string name="yedikule_fortress_work_hours">08:00&#8211;18:00</string>
    <string name="pera_museum_work_hours">10:00&#8211;19:00</string>
    <string name="istanbul_modern_work_hours">10:00&#8211;18:00</string>
    <string name="nusret_work_hours">12:00&#8211;01:00</string>
    <string name="mall_of_istanbul_work_hours">10:00&#8211;22:30</string>
    <string name="armada_hotel_price">289₺</string>
    <string name="topkapi_palace_phone">+90 (0212) 512 04 80</string>
    <string name="maidens_tower_phone">+90 (0216) 342 47 47</string>
    <string name="blue_mosque_phone">+90 (212) 458 44 68</string>
    <string name="spice_bazaar_phone">+90 (0212) 513 65 97</string>
    <string name="yedikule_fortress_phone"></string>
    <string name="pera_museum_phone">+90 (0212) 334 99 00
</string>
    <string name="istanbul_modern_phone">+90 (0212) 334 73 00
</string>
    <string name="nusret_phone">+90 (0212) 358 30 22
    </string>
    <string name="mall_of_istanbul_phone">+90 (0212) 801 10 00
</string>
    <string name="armada_hotel_phone">+90 (0212) 455 44 55
</string>
    <string name="topkapi_palace_web">www.topkapisarayi.gov.tr/tr
</string>
    <string name="maidens_tower_web">www.kizkulesi.com.tr
</string>
    <string name="blue_mosque_web">www.sultanahmetcamii.org
</string>
    <string name="spice_bazaar_web">www.misircarsisi.org.tr
</string>
    <string name="yedikule_fortress_web"></string>
    <string name="pera_museum_web">www.peramuzesi.org.tr
</string>
    <string name="istanbul_modern_web">www.istanbulmodern.org
</string>
    <string name="nusret_web">www.nusr-et.com.tr
    </string>
    <string name="mall_of_istanbul_web">www.mallofistanbul.com.tr
</string>
    <string name="armada_hotel_web">www.armadahotel.com.tr
</string>
    <string-array name="popular_places_name">
        <item>Hagia Sophia</item>
        <item>Topkapı Palace</item>
        <item>Blue Mosque</item>
        <item>Basilica Cistern</item>
        <item>Hippodrome Square</item>
        <item>Grand Bazaar</item>
        <item>Süleymaniye Mosque</item>
        <item>Spice Bazaar</item>
        <item>Dolmabahçe Palace</item>
        <item>Yedikule Fortress</item>
        <item>Galata Tower</item>
        <item>Maiden\'s Tower</item>
    </string-array>
    <string-array name="popular_places_latitude">
        <item>41.009458
        </item>
        <item>41.011843
        </item>
        <item>41.006365
        </item>
        <item>41.009307
        </item>
        <item>41.007987
        </item>
        <item>41.011154
        </item>
        <item>41.017262
        </item>
        <item>41.017617
        </item>
        <item>41.040249
        </item>
        <item>40.994273
        </item>
        <item>41.026491
        </item>
        <item>41.022077
        </item>
    </string-array>
    <string-array name="popular_places_longitude">
        <item>28.979919
        </item>
        <item>28.983400
        </item>
        <item>28.976857
        </item>
        <item>28.978007
        </item>
        <item>28.976301
        </item>
        <item>28.968047
        </item>
        <item>28.964110
        </item>
        <item>28.970305
        </item>
        <item>29.000545
        </item>
        <item>28.921123
        </item>
        <item>28.974221
        </item>
        <item>29.004153
</item>
    </string-array>
    <string-array name="popular_places_short_address">
        <item>Fatih</item>
        <item>Fatih</item>
        <item>Fatih</item>
        <item>Fatih</item>
        <item>Fatih</item>
        <item>Fatih</item>
        <item>Fatih</item>
        <item>Fatih</item>
        <item>Beşiktaş</item>
        <item>Fatih</item>
        <item>Beyoğlu</item>
        <item>Üsküdar</item>
    </string-array>
    <string-array name="popular_places_long_address">
        <item>Sultan Ahmet Mahallesi, Ayasofya Meydanı, 34122 Fatih/İstanbul</item>
        <item>Cankurtaran Mh., 34122 Fatih/İstanbul</item>
        <item>Sultan Ahmet Mahallesi, Atmeydanı Cd. No:7, 34122 Fatih/İstanbul</item>
        <item>Alemdar Mh., Yerebatan Cd. 1&#8531;3, 34410 Fatih/İstanbul</item>
        <item>Binbirdirek Mh., Sultan Ahmet Parkı No:2, 34122 Fatih/İstanbul</item>
        <item>Beyazıt Mh., 34126 Fatih/İstanbul</item>
        <item>Süleymaniye Mah., Prof. Sıddık Sami Onar cad. No:1, 34116 Fatih/İstanbul</item>
        <item>Rüstem Paşa Mahallesi, Erzak Ambarı Sok. No:92, 34116 Fatih/İstanbul</item>
        <item>Vişnezade Mahallesi, Dolmabahçe Cd., 34357 Beşiktaş/İstanbul</item>
        <item>Yedikule Mahallesi, Yedikule Meydanı Sk. No:9, 34107 Fatih/İstanbul</item>
        <item>Bereketzade Mahallesi, Galata Kulesi, 34421 Beyoğlu/İstanbul</item>
        <item>Salacak Mahallesi, Üsküdar Salacak Mevkii, 34668 Üsküdar/İstanbul</item>
    </string-array>
</resources>